2002-05-23  Gareth Pearce  <tilps@hotmail.com>

        * libc/stdio/Makefile.am: Modify to add setbuffer.c and setlinebuf.c.
        * libc/stdio/Makefile.in: Regenerated.
        * libc/stdio/setbuffer.c: New file.
        * libc/stdio/setlinebuf.c: New file.

2002-05-23  Jeff Johnston  <jjohnstn@redhat.com>

        * libc/sys/linux/Makefile.am: Add resource.c.
        * libc/sys/linux/Makefile.in: Regenerated.
        * libc/sys/linux/resource.c: New file.
        * libc/sys/linux/time.c: Add settimeofday, getitimer, and setitimer.
        * libc/sys/linux/machine/i386/Makefile.am: Remove syscalls.c.
        * libc/sys/linux/machine/i386/Makefile.in: Regenerated.
        * libc/sys/linux/machine/i386/syscalls.c: Removed as functions
        are now found in libc/sys/linux/resource.c.

2002-05-23  Jeff Johnston  <jjohnstn@redhat.com>

        * libc/include/string.h (bcmp, bcopy, bzero): Change prototypes
        to use void * pointers and comply with Single Unix spec.
        * libc/string/bcmp.c: Change to use void * instead of char *.
        * libc/string/bcopy.c: Ditto.
        * libc/string/bzero.c: Ditto.

2002-05-22  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/shm_open.c: New file.
	* libc/sys/linux/shm_unlink.c: Ditto.
	* libc/sys/linux/Makefile.am: Add support for shm_open.c and
	shm_unlink.c.
	* libc/sys/linux/Makefile.in: Regenerated.
	* libc/sys/linux/sys/types.h: Add some additional checks to see
	if clock_t or time_t is already defined.

2002-05-22  Jeff Johnston  <jjohnstn@redhat.com>

        * Makefile.am: Don't pass $toollibdir down directly in
        AM_MAKEFLAGS as it causes all multilibs to use the same toollibdir.
        Pass it under the name: top_toollibdir.
        * Makefile.in: Regenerated.

2002-05-22  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/types.h: Revert previous patch.

2002-05-22  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/types.h: Include cygwin/types.h always under